# MLops.Codespace

./: .gitignore  Dockerfile  README.md  project_status.html  pyproject.toml
app/backend/: __init__.py  main.py
app/frontend/: index.html  package.json
app/frontend/src/: App.tsx
config/: attack_scenarios.yaml  model_endpoints.yaml
data/raw/: attack_vectors.csv
monitoring/: grafana-dashboard.json  prometheus.yml
pipelines/: dvc.yaml
src/: __init__.py
src/attack_engine/: __init__.py  executor.py  ingest.py
src/drift_detector/: __init__.py  drift_detector.py
src/evaluator/: __init__.py  judge.py  mlflow_tracking.py
src/pipelines/: run_validation.py
tests/: test_attack_engine.py
