[tool.poetry]
name = "redmind-ai"
version = "0.1.0"
description = "Autonomous security validation platform for agentic AI systems and LLMs."
authors = ["RedMind AI"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.26.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
mlflow = "^2.8.0"
prometheus-client = "^0.17.0"
pyyaml = "^6.0.3"
kagglehub = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
